syntax = "proto3";
package ClassIsland.Core.Protobuf.Client;
option csharp_namespace = "ClassIsland.Core.Protobuf.Client";

import "Protobuf/Enum/CommandTypes.proto";

message ClientCommandDeliverScReq {
  Enum.CommandTypes Type = 2;
  bytes Payload = 3;
}
