syntax = "proto3";
package ClassIsland.Core.Protobuf.Client;
option csharp_namespace = "ClassIsland.Core.Protobuf.Client";

message ClientRegisterCsReq {
    string clientUid = 1;
    string clientId = 2;
}
