syntax = "proto3";
package ClassIsland.Core.Protobuf.Command;
option csharp_namespace = "ClassIsland.Core.Protobuf.Command";

message HeartBeat {
    bool isOnline = 1;
}
